@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-14T16:38:58Z",
-  "count_outdated" : 240,
-  "uniques_outdated" : 56,
+  "timestamp" : "2022-07-17T08:24:54Z",
+  "count_outdated" : 241,
+  "uniques_outdated" : 57,
   "count" : 249,
   "uniques" : 59,
   "views" : [
-    {
-      "timestamp": "2022-07-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-06T00:00:00Z",
       "count": 6,
